[gd_scene load_steps=7 format=2]

[ext_resource path="res://leaderboard/LetterButton.gd" type="Script" id=1]
[ext_resource path="res://fonts/upheaval/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://leaderboard/arrow.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 84
outline_size = 3
outline_color = Color( 0.00784314, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Arrows"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 39, -15 ), Vector2( 39, -22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 39, 96 ), Vector2( 39, 103 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 39, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 39, 96 ) ]
}

[node name="Button" type="Button" groups=["button_letter"]]
modulate = Color( 1, 1, 1, 0.498039 )
margin_right = 80.0
margin_bottom = 82.0
rect_min_size = Vector2( 75, 75 )
custom_fonts/font = SubResource( 1 )
text = "A"
icon_align = 1
script = ExtResource( 1 )

[node name="ArrowUp" type="Sprite" parent="."]
position = Vector2( 39, -15 )
texture = ExtResource( 3 )

[node name="ArrowDown" type="Sprite" parent="."]
position = Vector2( 39, 96 )
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Arrows = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
